# qwen2vl-flux

./: .gitignore  main.py  model.py  pyproject.toml  requirements.txt
flux/: activations.py  attention.py  attention_processor.py  controlnet_flux.py  embeddings.py  flux_network.py  normalization.py  pipeline_flux.py  pipeline_flux_chameleon.py  pipeline_flux_controlnet.py  pipeline_flux_controlnet_img2img.py  pipeline_flux_controlnet_inpainting.py  pipeline_flux_img2img.py  pipeline_flux_inpaint.py  pipeline_output.py  scheduling_flow_match_euler_discrete.py  transformer_flux.py
flux/lora/: lora_base.py  lora_conversion_utils.py  lora_pipeline.py  peft.py
qwen2_vl/: configuration_qwen2_vl.py  image_processing_qwen2_vl.py  modeling_qwen2_vl.py  processing_qwen2_vl.py
