[tool.black]
line-length = 79

[project]
name = "qwen2vl-flux"
version = "0.1.0"
description = "Qwen2VL-Flux: Unifying Image and Text Guidance for Controllable Image Generation"
readme = "README.md"
authors = [
    { name = "Jean-Pierre Chauvel", email = "jean.p.chauvel@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==0.33.0",
    "controlnet-aux>=0.0.10",
    "diffusers==0.30.0",
    "mediapipe>=0.10.21",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "optimum>=1.26.1",
    "optimum-quanto>=0.2.7",
    "pillow>=10.0.0",
    "protobuf==4.25.3",
    "sam2>=1.1.0",
    "sentencepiece==0.2.0",
    "torch>=2.4.1",
    "torchvision>=0.15.0",
    "transformers==4.45.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
